Properly reset the number of frames present in the input buffer after re-creating it

Otherwise we would be out of sync triggering the assert. This resolves the issue mentioned in https://bugzilla.mozilla.org/show_bug.cgi?id=1489052#c10